Fixing the publishing procedure.